[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["remmover <77463027+remmover@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
redis = "^5.0.3"
fastapi-limiter = "^0.1.6"
fastapi-mail = "^1.4.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
